--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-./.settings
-./.cproject
-./Core/Startup/*
-./Drivers/*
-./.mxproject
-./.project
-./STM32F107VCTX_FLASH.ld
+.settings
+.cproject
+Core/Startup/
+Drivers/
+.mxproject
+.project
+STM32F107VCTX_FLASH.ld
